--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
     <style type="text/css">
@@ -30,6 +31,13 @@
         }
 
     </style>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <title>{% block title %}Tim's site {% endblock %} </title>
 </head>
 
@@ -41,10 +49,20 @@
     </div>
 
     <div id = "content", name="content", class="main">
-    {% block content %}
-    
-    {% endblock %}
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <h1 class="mt-2">My Site</h1>
+                <hr class="mt-0 mb-4"
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
